--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>给龚名月的大爱心 </title>
+    <title>给龚名月的大爱心</title>
     <style>
         html,
         body {
@@ -35,32 +35,32 @@
     <canvas id="pinkboard"></canvas>
     <font size="6" color="pink">
         <marquee direction="down" scrollamount=5 class="down"></marquee>
-        <marquee direction="left" scrollamount=5>新年快乐</marquee>
-        <marquee direction="right" scrollamount=5>百事可乐</marquee>
+        <marquee direction="left" scrollamount=5>生日快乐</marquee>
+        <marquee direction="right" scrollamount=5>生日可乐</marquee>
     </font>
     <font size="6" color="pink">
       <marquee direction="left" scrollamount=5></marquee>
       <marquee direction="right" scrollamount=5></marquee>
   </font>
 	    <font size="6" color="pink">
-        <marquee direction="left" scrollamount=5>吉祥如意</marquee>
-        <marquee direction="right" scrollamount=5>吉祥如意</marquee>
+        <marquee direction="left" scrollamount=5>生日快乐</marquee>
+        <marquee direction="right" scrollamount=5>生日快乐</marquee>
     </font>
     <font size="6" color="pink">
       <marquee direction="left" scrollamount=5></marquee>
       <marquee direction="right" scrollamount=5></marquee>
   </font>
 	    <font size="6" color="pink">
-        <marquee direction="left" scrollamount=5>大吉大利</marquee>
-        <marquee direction="right" scrollamount=5>美梦成真</marquee>
+        <marquee direction="left" scrollamount=5>生日快乐</marquee>
+        <marquee direction="right" scrollamount=5>生日快乐</marquee>
     </font>
     <font size="6" color="pink">
       <marquee direction="left" scrollamount=5></marquee>
       <marquee direction="right" scrollamount=5></marquee>
   </font>
 		<font size="6" color="pink">
-        <marquee direction="left" scrollamount=5>万事如意</marquee>
-        <marquee direction="right" scrollamount=5>健康平安</marquee>
+        <marquee direction="left" scrollamount=5>生日快乐</marquee>
+        <marquee direction="right" scrollamount=5>生日快乐</marquee>
     </font>
     <script>
         var settings = {
